# lf-energy-registry-os

./: .gitignore  README.md  pyproject.toml
api/: main.py
examples/: sample_input.csv
frontend/: .cleanup-webpack-cache.sh  .eslintrc.js  Dockerfile  Dockerfile.dev  babel.config.js  frontend_service.yml  package-lock.json  package.json  webpack.config.js
frontend/src/: App.js  AppRoutes.js  custom-client.js  example_data.js  index.js  setupTests.js
frontend/src/api/: accountAPI.js  adminAPI.js  approvalAPI.js  authAPI.js  baseAPI.js  certificateAPI.js  dataSourcesAPI.js  deviceAPI.js  fileUploadAPI.js  invitationAPI.js  measurementAPI.js  organization.js  organizationAPI.js  registrationAPI.js  reportingAPI.js  storageAPI.js  storageNetAPI.js  subaccountAPI.js  superAdminAPI.js  userAPI.js
frontend/src/components/: RegistryNavBar.js  SubaccountWizard.js
frontend/src/context/: AccountContext.js  UserContext.js
frontend/src/enum/: index.js
frontend/src/pages/: AccountDetailPage.js  MeasurementReportsPage.js  MergedCertificatesPage.js  NetStorageMeasurementsReportPage.js  RegistrationPage.jsx  STARCertificatesPage.js  STARReportPage.js  StorageMeasurementsReportPage.js  StorageRecordsPage.js  SubaccountClaimPage.js
frontend/tests/: AccountManagement.test.js  ApprovalWorkflow.test.js  OrganizationManagement.test.js  SuperAdmin.test.js  test_frontend_response.js
reference-ui/: README.md
reference/gc_registry_app_snapshot/: README.md
src/registryos_engine/: __init__.py  csv_ingest.py  issuance.py  schemas.py
tests/: test_issuance.py
(+142 files in other folders)
